--- a/styles/common/_theme.scss
+++ b/styles/common/_theme.scss
@@ -1,3 +1,5 @@
+@use "../base/variables" as *;
+
 body.dark-theme {
     --first-color-dark: hsl(var(--hue), 8%, 20%);
     --title-color: hsl(var(--hue), 4%, 95%);
