--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,3 +1,6 @@
+@use "variables" as *;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 * {
     box-sizing: border-box;
     padding: 0;
