--- a/scss/common/_scrollup.scss
+++ b/scss/common/_scrollup.scss
@@ -11,16 +11,16 @@
     z-index: var(--z-tooltip);
     opacity: .8;
     transition: .4s;
-}
 
-.scrollup__icon {
-    font-size: 1rem;
-    color: #FFF;
-}
-
-.scrollup:hover {
-    background-color: var(--first-color-alt);
-    opacity: 1;
+    &__icon {
+        font-size: 1rem;
+        color: #fff;
+    }
+    
+    &:hover {
+        background-color: var(--first-color-alt);
+        opacity: 1;
+    }
 }
 
 .show-scroll {
