--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -1,6 +1,7 @@
 @use "../base/variables" as *;
 
 .header {
+    padding: 0 1rem;
     position: fixed;
     top: 0;
     left: 0;
@@ -15,7 +16,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
 }
 
 .nav__logo,
@@ -30,11 +30,11 @@
     letter-spacing: -1px;
     display: inline-flex;
     align-items: center;
-    column-gap: 0.5rem;
-    transition: 0.3s;
+    column-gap: .5rem;
+    transition: .3s;
 }
 
-.nav__logo--icon {
+.nav__logo-icon {
     font-size: 1.15rem;
     color: var(--first-color);
 }
@@ -49,10 +49,20 @@
     cursor: pointer;
 }
 
-.nav__btns {
-    display: inline-flex;
-    align-items: center;
-    column-gap: 1rem;
+@media screen and (max-width: 767px) {
+    .nav__menu {
+        position: fixed;
+        background-color: var(--container-color);
+        width: 80%;
+        height: 100%;
+        top: 0;
+        right: -100%;
+        box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, .1);
+        padding: 4rem 0 0 3rem;
+        border-radius: 1rem 0 0 1rem;
+        transition: .3s;
+        z-index: var(--zi-fixed);
+    }
 }
 
 .nav__close {
@@ -71,7 +81,7 @@
 
 .nav__link {
     color: var(--title-color);
-    font-weight: var(--fw-medium);
+    font-weight: var(--fs-md);
     transition: 0.3s;
 }
 
@@ -80,41 +90,24 @@
 }
 
 .show-menu {
-    right: 0 !important;
+    right: 0;
 }
 
 .scroll-header {
-    box-shadow: 0 1px 4px hsla(var(--hue), 4%, 15%, 0.1);
+    box-shadow: 0 1px 4px hsla(var(--hue), 4%, 15%, .1);
 }
 
 .active-link {
     position: relative;
     color: var(--first-color);
-
-    &::after {
-        content: '';
-        position: absolute;
-        bottom: -0.5rem;
-        left: 0;
-        width: 50%;
-        height: 2px;
-        background-color: var(--first-color);
-    }
 }
 
-
-@media screen and (max-width: 767px) {
-    .nav__menu {
-        position: fixed;
-        background-color: var(--container-color);
-        width: 80%;
-        height: 100%;
-        top: 0;
-        right: -100%;
-        box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, 0.1);
-        padding: 4rem 0 0 3rem;
-        border-radius: 1rem 0 0 1rem;
-        transition: 0.3s;
-        z-index: var(--z-fixed);
-    }
+.active-link::after {
+    content: '';
+    position: absolute;
+    bottom: -.5rem;
+    left: 0;
+    width: 50%;
+    height: 2px;
+    background-color: var(--first-color);
 }
