--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -16,77 +16,77 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
 
-.nav__logo,
-.nav__toggle,
-.nav__close {
-    color: var(--title-color);
-}
-
-.nav__logo {
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: -1px;
-    display: inline-flex;
-    align-items: center;
-    column-gap: .5rem;
-    transition: .3s;
-}
-
-.nav__logo-icon {
-    font-size: 1.15rem;
-    color: var(--first-color);
-}
-
-.nav__logo:hover {
-    color: var(--first-color);
-}
-
-.nav__toggle {
-    display: inline-flex;
-    font-size: 1.25rem;
-    cursor: pointer;
-}
-
-@media screen and (max-width: 767px) {
-    .nav__menu {
-        position: fixed;
-        background-color: var(--container-color);
-        width: 80%;
-        height: 100%;
-        top: 0;
-        right: -100%;
-        box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, .1);
-        padding: 4rem 0 0 3rem;
-        border-radius: 1rem 0 0 1rem;
-        transition: .3s;
-        z-index: var(--zi-fixed);
+    &__logo,
+    &__toggle,
+    &__close {
+        color: var(--title-color);
     }
-}
 
-.nav__close {
-    font-size: 1.5rem;
-    position: absolute;
-    top: 1rem;
-    right: 1.25rem;
-    cursor: pointer;
-}
+    &__logo {
+        text-transform: uppercase;
+        font-weight: 700;
+        letter-spacing: -1px;
+        display: inline-flex;
+        align-items: center;
+        column-gap: 0.5rem;
+        transition: 0.3s;
+    }
 
-.nav__list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1.5rem;
-}
+    &__logo-icon {
+        font-size: 1.15rem;
+        color: var(--first-color);
+    }
 
-.nav__link {
-    color: var(--title-color);
-    font-weight: var(--fs-md);
-    transition: 0.3s;
-}
+    &__logo:hover {
+        color: var(--first-color);
+    }
 
-.nav__link:hover {
-    color: var(--first-color);
+    &__toggle {
+        display: inline-flex;
+        font-size: 1.25rem;
+        cursor: pointer;
+    }
+
+    @media screen and (max-width: 767px) {
+        &__menu {
+            position: fixed;
+            background-color: var(--container-color);
+            width: 80%;
+            height: 100%;
+            top: 0;
+            right: -100%;
+            box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, .1);
+            padding: 4rem 0 0 3rem;
+            border-radius: 1rem 0 0 1rem;
+            transition: .3s;
+            z-index: var(--zi-fixed);
+        }
+    }
+
+    &__close {
+        font-size: 1.5rem;
+        position: absolute;
+        top: 1rem;
+        right: 1.25rem;
+        cursor: pointer;
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.5rem;
+    }
+
+    &__link {
+        color: var(--title-color);
+        font-weight: var(--fs-md);
+        transition: 0.3s;
+    }
+
+    &__link:hover {
+        color: var(--first-color);
+    }
 }
 
 .show-menu {
@@ -100,14 +100,14 @@
 .active-link {
     position: relative;
     color: var(--first-color);
-}
-
-.active-link::after {
-    content: '';
-    position: absolute;
-    bottom: -.5rem;
-    left: 0;
-    width: 50%;
-    height: 2px;
-    background-color: var(--first-color);
+    
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -.5rem;
+        left: 0;
+        width: 50%;
+        height: 2px;
+        background-color: var(--first-color);
+    }
 }
