--- a/scss/common/_theme.scss
+++ b/scss/common/_theme.scss
@@ -11,11 +11,13 @@ body.dark-theme {
 .change-theme {
     color: var(--title-color);
     font-size: 1.15rem;
-    cursor: pointer;
 }
 
 #theme-button {
+    display: inline-block;
     cursor: pointer;
+    margin-right: 0.6rem;
+    font-size: var(--fs-md);
 }
 
 .dark-theme {
