--- a/scss/utils/_breakpoints.scss
+++ b/scss/utils/_breakpoints.scss
@@ -1,4 +1,5 @@
 @use "../base/variables" as *;
+@use "../base/mixin" as *;
 
 @media screen and (max-width: 320px) {
     .container {
@@ -217,6 +218,8 @@
     }
 
     .footer {
+        @include set-left-and-right-padding;
+
         &__logo {
             font-size: var(--fs-xxl);
         }
