--- a/scss/common/_scrollup.scss
+++ b/scss/common/_scrollup.scss
@@ -6,17 +6,16 @@
     right: 1rem;
     bottom: -30%;
     display: inline-flex;
-    padding: .5rem;
-    border-radius: .25rem;
+    padding: 0.5rem;
     z-index: var(--z-tooltip);
-    opacity: .8;
-    transition: .4s;
+    opacity: 0.8;
+    transition: 0.4s;
 
     &__icon {
         font-size: 1rem;
         color: #fff;
     }
-    
+
     &:hover {
         background-color: var(--first-color-alt);
         opacity: 1;
